--- a/BibleCoreDataTest03242018/Base.lproj/Main.storyboard
+++ b/BibleCoreDataTest03242018/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +30,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiJ-tX-MNU">
-                                                    <rect key="frame" x="8" y="15" width="200" height="22"/>
+                                                    <rect key="frame" x="30" y="5" width="200" height="0.0"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="sKD-Bu-qvZ"/>
                                                     </constraints>
@@ -39,16 +38,28 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xzo-3b-Y2b">
+                                                    <rect key="frame" x="45" y="10" width="42" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="gS1-cw-Dwp"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="yiJ-tX-MNU" firstAttribute="bottom" secondItem="jVs-UD-O1p" secondAttribute="bottomMargin" id="1zd-OQ-aNW"/>
-                                                <constraint firstItem="yiJ-tX-MNU" firstAttribute="leading" secondItem="jVs-UD-O1p" secondAttribute="leading" constant="8" id="6sR-Zo-o79"/>
-                                                <constraint firstItem="yiJ-tX-MNU" firstAttribute="centerY" secondItem="jVs-UD-O1p" secondAttribute="centerY" id="Btw-f8-8Hg"/>
                                                 <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="yiJ-tX-MNU" secondAttribute="trailing" constant="816" id="I4Z-iS-rfu"/>
+                                                <constraint firstItem="yiJ-tX-MNU" firstAttribute="leading" secondItem="jVs-UD-O1p" secondAttribute="leading" constant="30" id="NAQ-u2-FUq"/>
+                                                <constraint firstItem="Xzo-3b-Y2b" firstAttribute="leading" secondItem="jVs-UD-O1p" secondAttribute="leading" constant="45" id="WxM-VX-qE0"/>
+                                                <constraint firstItem="yiJ-tX-MNU" firstAttribute="top" secondItem="jVs-UD-O1p" secondAttribute="top" constant="5" id="gef-c6-kUa"/>
+                                                <constraint firstItem="Xzo-3b-Y2b" firstAttribute="top" secondItem="yiJ-tX-MNU" secondAttribute="bottom" constant="5" id="rTf-vy-bb8"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xzo-3b-Y2b" secondAttribute="trailing" constant="20" symbolic="YES" id="xmx-qw-5cA"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="noteTitle" destination="yiJ-tX-MNU" id="1rO-Vd-iz0"/>
+                                            <outlet property="sectionsCompleted" destination="Xzo-3b-Y2b" id="cQO-vw-skr"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -77,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="132.68365817091455"/>
+            <point key="canvasLocation" x="1075.78125" y="132.65007320644216"/>
         </scene>
         <!--Notes View Controller-->
         <scene sceneID="hDc-Qr-lBo">
@@ -476,11 +487,86 @@
                         <outlet property="takeawaysTV" destination="d6c-E8-7ja" id="2BM-fi-KnP"/>
                         <outlet property="unexpectedOutletSwitch" destination="WTX-zH-r65" id="rtV-52-Ogf"/>
                         <outlet property="unexpectedTV" destination="i8g-43-lH0" id="RLS-EH-08f"/>
+                        <segue destination="T60-ai-aeK" kind="show" identifier="allNotesSegue" id="caI-Kr-jcY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gm0-fP-dxv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1981.6406249999998" y="140.99560761346999"/>
+            <point key="canvasLocation" x="1907" y="116"/>
+        </scene>
+        <!--All NotesVC-->
+        <scene sceneID="Ylt-8C-g7h">
+            <objects>
+                <viewController storyboardIdentifier="allNotesStoryboardID" id="T60-ai-aeK" customClass="AllNotesVC" customModule="BibleCoreDataTest03242018" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BG9-MK-eh1">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhz-1W-Cu5">
+                                <rect key="frame" x="0.0" y="64" width="1024" height="1302"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D7o-bp-yTb">
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1302"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v8r-wI-VlG">
+                                                <rect key="frame" x="0.0" y="50" width="1024" height="1252"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <attributedString key="attributedText"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e5P-N5-aaI">
+                                                <rect key="frame" x="30" y="8" width="150" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="1L8-8Z-jkh"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="meq-py-JcQ"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="v8r-wI-VlG" secondAttribute="trailing" id="1vj-8W-SjF"/>
+                                            <constraint firstItem="e5P-N5-aaI" firstAttribute="top" secondItem="D7o-bp-yTb" secondAttribute="top" constant="8" id="Cdq-UP-Xqz"/>
+                                            <constraint firstItem="v8r-wI-VlG" firstAttribute="top" secondItem="D7o-bp-yTb" secondAttribute="top" constant="50" id="Lmy-Vu-zaQ"/>
+                                            <constraint firstItem="v8r-wI-VlG" firstAttribute="leading" secondItem="D7o-bp-yTb" secondAttribute="leading" id="ODl-hn-9kt"/>
+                                            <constraint firstAttribute="bottom" secondItem="v8r-wI-VlG" secondAttribute="bottom" id="YVg-oZ-ehw"/>
+                                            <constraint firstItem="e5P-N5-aaI" firstAttribute="leading" secondItem="D7o-bp-yTb" secondAttribute="leading" constant="30" id="eWs-Qw-z9N"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="e5P-N5-aaI" secondAttribute="trailing" constant="20" symbolic="YES" id="mZm-Uo-6eq"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="D7o-bp-yTb" secondAttribute="trailing" id="DEx-2T-qTz"/>
+                                    <constraint firstAttribute="trailing" secondItem="D7o-bp-yTb" secondAttribute="trailing" id="bwZ-j2-Cvd"/>
+                                    <constraint firstItem="D7o-bp-yTb" firstAttribute="width" secondItem="dhz-1W-Cu5" secondAttribute="width" id="h6i-EM-DlN"/>
+                                    <constraint firstAttribute="trailing" secondItem="D7o-bp-yTb" secondAttribute="trailing" id="iCh-ao-Kgh"/>
+                                    <constraint firstAttribute="bottom" secondItem="D7o-bp-yTb" secondAttribute="bottom" constant="1000" id="iNt-FX-Afy"/>
+                                    <constraint firstItem="D7o-bp-yTb" firstAttribute="centerY" secondItem="dhz-1W-Cu5" secondAttribute="centerY" id="kHf-St-o6p"/>
+                                    <constraint firstItem="D7o-bp-yTb" firstAttribute="centerX" secondItem="dhz-1W-Cu5" secondAttribute="centerX" id="kJd-A9-hRj"/>
+                                    <constraint firstItem="D7o-bp-yTb" firstAttribute="height" secondItem="dhz-1W-Cu5" secondAttribute="height" id="wYs-PK-R1b"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dhz-1W-Cu5" firstAttribute="leading" secondItem="ogb-pM-N43" secondAttribute="leading" id="Fyv-94-GGW"/>
+                            <constraint firstItem="ogb-pM-N43" firstAttribute="trailing" secondItem="dhz-1W-Cu5" secondAttribute="trailing" id="UeI-1f-njG"/>
+                            <constraint firstItem="dhz-1W-Cu5" firstAttribute="top" secondItem="ogb-pM-N43" secondAttribute="top" id="sfK-Vo-fwX"/>
+                            <constraint firstItem="ogb-pM-N43" firstAttribute="bottom" secondItem="dhz-1W-Cu5" secondAttribute="bottom" id="tHU-eR-vfW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ogb-pM-N43"/>
+                    </view>
+                    <connections>
+                        <outlet property="allNotesSV" destination="dhz-1W-Cu5" id="ivo-vn-8na"/>
+                        <outlet property="allNotesTV" destination="v8r-wI-VlG" id="Qaz-M0-9lX"/>
+                        <outlet property="titleOfNotes" destination="e5P-N5-aaI" id="MPk-Cd-aq1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QIj-0Q-KBt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2608.59375" y="79.941434846266461"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XBY-wH-9qu">
